# VulkanEngineV5

./: .clang-tidy  .gitignore  .gitmodules  BASE_IMPLEMENTATION_PROGRESS.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  DartConfiguration.tcl  IMPLEMENTATION_NOTES.md  README.md  config.json  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt
src/VulkanEngine/: CMakeLists.txt
src/VulkanEngine/Component/: Component.cppm
src/VulkanEngine/Mesh/: MeshAssembler.cpp  MeshAssembler.cppm  MeshHandler.cpp  MeshTypes.cppm  MeshTypes.hpp
src/VulkanEngine/Platform/: SdlPlatformBackend.cpp
src/VulkanEngine/RenderGraph/: GraphExecutionContext.cppm  RenderGraph.cppm
src/VulkanEngine/ResourceSystem/: ResourceSystem.cpp  ResourceSystem.cppm
src/VulkanEngine/Runtime/: CommonTypes.cppm  RuntimeShell.cpp  RuntimeShell.cppm  VulkanBootstrap.cpp  VulkanBootstrapBackend.cppm  VulkanDevice.cpp  VulkanInstance.cpp  VulkanInstance.cppm  VulkanSwapchain.cpp  VulkanSwapchain.cppm
src/VulkanEngine/Utils/: ImageUtils.cpp  ImageUtils.cppm  MemoryUtils.cpp  MemoryUtils.cppm  PipelineUtils.cpp  PipelineUtils.cppm
src/app/: CMakeLists.txt  Game.cpp  Game.cppm  main.cpp
src/app/Components/: DemoInputComponent.cppm  InputHandler.hpp  SimpleControllerComponent.cppm  TransformControlComponent.cppm
src/app/components/: Transform.cppm
src/app/demoscene/: DemoScene.cpp  DemoScene.cppm  DemoSceneRenderer.cpp  DemoSceneRenderer.cppm
src/app/shaders/: normals.frag  normals.slang  solid.frag  solid.slang  textured.frag  textured.vert
src/backend/: CMakeLists.txt  Component.cppm  Event.cpp  Event.cppm  ImGuiBackend.cpp  ImGuiBackend.cppm
src/backend/Component/: Component.cppm
src/backend/Event/: Event.cpp  Event.cppm
src/backend/ImGui/: ImGuiBackend.cpp  ImGuiBackend.cppm
src/backend/Platform/: SdlPlatform.cpp  SdlPlatform.cppm  SdlPlatformBackend.cpp  SdlPlatformBackend.cppm  SdlPlatformShell.cpp  SdlPlatformShell.cppm
src/backend/RenderGraph/: GraphExecutionBridge.cppm  GraphExecutionContext.cppm  RenderGraph.cpp  RenderGraph.cppm  RenderGraphCompile.cpp  RenderGraphExecution.cpp
src/backend/Runtime/: CommonTypes.cppm  FrameLoop.cpp  FrameLoop.cppm  VulkanBootstrap.cpp  VulkanBootstrap.cppm  VulkanBootstrapBackend.cpp  VulkanBootstrapBackend.cppm  VulkanDevice.cpp  VulkanDevice.cppm  VulkanDispatchLoader.cpp  VulkanDispatchLoaderStorage.cppm  VulkanInstance.cpp  VulkanInstance.cppm  VulkanSwapchain.cpp  VulkanSwapchain.cppm
src/backend/Utils/: CallbackList.cppm  ImageUtils.cpp  ImageUtils.cppm  MemoryUtils.cpp  MemoryUtils.cppm  PipelineUtils.cpp  PipelineUtils.cppm  ThreadPool.cppm  Timer.cpp  Timer.cppm  VulkanDebugUtils.cpp  VulkanDebugUtils.cppm
src/engine/: CMakeLists.txt
src/engine/Application/: Application.cppm
src/engine/BindlessManager/: BindlessManager.cpp  BindlessManager.cppm  TextureSlot.cppm
src/engine/Component/: Component.cppm
src/engine/Components/: Camera.cppm  Material.cppm  MeshReference.cppm  MeshRenderer.cppm  Transform.cppm
src/engine/DefaultRenderer/: DefaultRenderer.cpp  DefaultRenderer.cppm
src/engine/DefaultResources/: DefaultResources.cpp  DefaultResources.cppm
src/engine/FrameRenderer/: FrameRenderer.cpp  FrameRenderer.cppm
src/engine/Game/: Game.cpp  Game.cppm
src/engine/GpuResources/: BlockBuffer.cpp  BlockBuffer.cppm  DeviceBufferHeap.cpp  DeviceBufferHeap.cppm  GpuBuffer.cpp  GpuBuffer.cppm  GpuDescriptorSet.cpp  GpuDescriptorSet.cppm  GpuResources.cppm  GpuTexture.cpp  GpuTexture.cppm  StagingManager.cpp  StagingManager.cppm
src/engine/ImGui/: ImGuiSystem.cpp  ImGuiSystem.cppm
src/engine/Input/: Input.cpp  Input.cppm
src/engine/MaterialManager/: MaterialId.cppm  MaterialManager.cpp  MaterialManager.cppm
src/engine/Mesh/: MeshAssembler.cpp  MeshTypes.cppm
src/engine/MeshRendererSystem/: MeshRendererSystem.cpp  MeshRendererSystem.cppm
src/engine/RenderPipeline/: RenderPipeline.cpp  RenderPipeline.cppm
src/engine/Renderer/: Renderer.cpp  Renderer.cppm
src/engine/ResourceSystem/: ResourceSystem.cppm  TextureResource.cpp  TextureResource.cppm
src/engine/SceneLoader/: SceneLoader.cpp  SceneLoader.cppm
src/engine/SceneRenderer/: SceneRenderer.cpp  SceneRenderer.cppm  SceneRendererFrame.cpp  SceneRendererPipeline.cpp
src/engine/ShaderLoader/: ShaderLoader.cpp  ShaderLoader.cppm
src/engine/StandardMeshPipeline/: StandardMeshPipeline.cpp  StandardMeshPipeline.cppm
src/engine/TechniqueManager/: TechniqueId.cppm  TechniqueManager.cpp  TechniqueManager.cppm
src/engine/assets/: MeshRegistry.cpp  MeshRegistry.cppm  MeshTypes.cppm  SceneLoader.cpp  SceneLoader.cppm  ShaderLoader.cpp  ShaderLoader.cppm
src/engine/core/: Application.cppm  Game.cpp  Game.cppm  Startup.cppm
src/engine/platform/: ImGuiSystem.cpp  ImGuiSystem.cppm  Input.cpp  Input.cppm
src/engine/rendering/: DefaultResources.cpp  DefaultResources.cppm  MeshRenderSystem.cpp  MeshRenderSystem.cppm  MeshRendererSystem.cpp  MeshRendererSystem.cppm  PipelinePass.cpp  PipelinePass.cppm  RenderPipeline.cpp  RenderPipeline.cppm  Renderer.cpp  Renderer.cppm  SceneRenderer.cpp  SceneRenderer.cppm  SceneRendererFrame.cpp  SceneRendererPipeline.cpp  StandardMeshPipeline.cpp  StandardMeshPipeline.cppm
src/engine/shaders/: collect.comp  (+27 more)
tests/: CMakeLists.txt  backend_factory_tests.cpp  component_system_tests.cpp  example_tests.cpp  graph_execution_bridge_tests.cpp  graph_execution_context_tests.cpp  input_system_tests.cpp  platform_shell_tests.cpp  render_graph_diagnostics_tests.cpp  render_graph_tests.cpp  resource_system_texture_tests.cpp  runtime_shell_tests.cpp  test_logging.hpp  vulkan_bootstrap_tests.cpp
tests/app/: CMakeLists.txt  example_tests.cpp  test_logging.cppm
tests/backend/: CMakeLists.txt  backend_factory_tests.cpp  component_system_tests.cpp  event_system_tests.cpp  graph_execution_bridge_tests.cpp  graph_execution_context_tests.cpp  platform_shell_tests.cpp  render_graph_tests.cpp  runtime_shell_tests.cpp  vulkan_bootstrap_tests.cpp
tests/engine/: CMakeLists.txt  input_system_tests.cpp  resource_system_texture_tests.cpp
(+90 files in other folders)
